--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,31 @@
 {
   "name": "dental-chatbot-backend",
-  "version": "0.3.0",
+  "version": "1.0.0",
+  "description": "Express.js backend API for Dental AI Chatbot with JWT authentication and appointment management",
   "private": true,
   "type": "module",
+  "main": "server.js",
+  "author": "Dental AI Team",
+  "license": "MIT",
+  "keywords": [
+    "dental",
+    "chatbot",
+    "api",
+    "express",
+    "authentication",
+    "appointments"
+  ],
   "scripts": {
-    "dev": "nodemon --exec ts-node server.ts",
-    "start": "node dist/server.js",
-    "build": "tsc",
+    "dev": "node --watch server.js",
+    "start": "node server.js",
     "test": "jest --detectOpenHandles --forceExit",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "dev:js": "node --watch server.js"
+    "test:coverage": "jest --coverage --collectCoverageFrom='**/*.js' --coverageDirectory='coverage'",
+    "lint": "echo 'Linting with ESLint would go here'",
+    "health": "curl -f http://localhost:8000/health || exit 1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -20,23 +33,22 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.3.2",
-    "pg": "^8.11.5",
-    "bcrypt": "^5.1.1"
+    "pg": "^8.11.5"
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "supertest": "^7.0.0",
-    "@types/jest": "^29.5.12",
-    "typescript": "^5.5.4",
-    "@types/node": "^20.14.12",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/bcrypt": "^5.0.2",
-    "@types/pg": "^8.11.6",
-    "ts-node": "^10.9.2",
-    "nodemon": "^3.1.4"
-  }
+    "supertest": "^7.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dental-ai/chatbot-backend"
+  },
+  "bugs": {
+    "url": "https://github.com/dental-ai/chatbot-backend/issues"
+  },
+  "homepage": "https://github.com/dental-ai/chatbot-backend#readme"
 }
